# gridalpha-v2

./: .env.example  .env.local.example  .gitignore  .mcp.json  Alexandria_SubTier_1A_Handoff_FULL.md  BACKEND_SPRINT_3B.md  CLAUDE.md  CODEOWNERS  README.md  audit-baseline.json  audit-wave5.1-final.json  index.html  nixpacks.toml  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.app.json  vite.config.ts
.claude/: launch.json  settings.local.json
.claude/commands/: screenshot-loop.md
.husky/: pre-commit
app/: main.py
app/db/: __init__.py  session.py
app/routers/: _debug_pjm.py  ai.py  ancillary.py  atlas.py  energy.py  fuel_mix.py  lmp.py  news.py  outages_v2.py  reserve_margin.py  spark_spread.py  stream.py  weather.py
app/scripts/: __init__.py  _db.py  ingest_eia_860.py  ingest_eia_860m.py  (+1 more)
docs/: brief-template-migration.md  brief-template.md  claude-md-audit.md  v2-backend-contract.md  wave-3-chroma-audit.md  wave-3-conduit-audit.md  wave-3-conduit2-test-results.md  wave-4-chroma-audit.md  wave-5-cursor-validation.md  wave-6-close.md
scripts/: _check_vercel.py  _pdf_grep.py  _pdf_urls.py  gen-plants.cjs  gen-tx-lines.cjs  gen-zones.cjs  smoke-test.ts
src/: App.css  App.tsx  index.css  main.tsx
tools/gridalpha-tokens-mcp/: .gitignore  CONFIGURATION.md  README.md  demo_responses.py  pyproject.toml  server.py  test_figma.py  test_multi_agent.py  test_primitives.py  test_tokens.py  test_watcher.py
tools/gridalpha-tokens-mcp/tools/: __init__.py  figma_reference.py  primitive_lookup.py  tokens_search.py  watcher.py
(+521 files in other folders)
